# qwirkle

./: .gitignore  .pdm-python  README.md  conftest.py  pyproject.toml  tox.ini
.github/workflows/: tests.yml
docs/: README.md.in  design.md  requirements.md  rules.md  test-requirements.md
etc/: gen_readme.py  gen_tiles.py
qwirkle/: __main__.py  config.py  conftest.py
qwirkle/gui/: __init__.py  component_display_adapter.py  pygamece_adapter.py  pygamece_bag_adapter.py  pygamece_board_adapter.py
qwirkle/gui/pygame_ce/: bag_adapter.py  board_adapter.py  display_adapter.py  hand_adapter.py  tile_adapter.py
qwirkle/logic/: __init__.py  bag.py  board.py  color.py  conftest.py  exp_placement.py  game.py  hand.py  models.py  player.py  shape.py  test_bag.py  test_board.py  test_board_expand.py  test_board_place_tiles.py  test_color.py  test_exp_placement.py  test_game.py  test_hand.py  test_models.py  test_player.py  test_shape.py
qwirkle/utils/: logging.py
src/: main.py
src/qwirkle/: config.py
src/qwirkle/gui/: __init__.py  __main__.py  board_adapter.py  game_adapter.py  hand_adapter.py  tile_adapter.py  tile_set.py  tiles.py
src/qwirkle/gui/pygame_ce/: __init__.py  bag_adapter.py  board_adapter.py  game_adapter.py  hand_adapter.py  tile_adapter.py
src/qwirkle/logic/: __init__.py  bag.py  board.py  component_display_adapter.py  exp_placement.py  game.py  game_log.py  hand.py  player.py  shape.py  tile.py
src/qwirkle/utils/: logging.py
tests/gui/: test_bag_adapter.py  test_board_adapter.py  test_game_adapter.py  test_hand_adapter.py  test_tile_adapter.py
tests/gui/pygame_ce/: test_bag_adapter.py  test_board_adapter.py  test_game_adapter.py  test_hand_adapter.py  test_tile_adapter.py
tests/logic/: test_board.py  test_board_expand.py  test_board_place_tiles.py  test_exp_placement.py  test_game.py  test_game_log.py  test_hand.py  test_player.py  test_shape.py
